# CMFO-COMPUTACION-FRACTAL-

./: .gitignore  ARCHITECT_LOG.md  AUDIT_REPORT.md  AUTO_COMPILE.bat  BUILD.md  BUILD_AND_RUN.bat  BUSINESS.md  CERTIFICATE_v3.1.md  CHANGELOG.md  CITATION.cff  CMFO_SUITE.bat  CMakeLists.txt  CONTRIBUTING.md  CORTEX_AI_REPORT.md  DEEP_DREAM_LOG.md  DERIVATION.md  DISCOVERY_LOG.md  DISCOVERY_TECHNICAL_ANALYSIS.md  DREAMER_REPORT.md  EXECUTIVE_SUMMARY_v3.1.md  EXECUTIVE_SUMMARY_v4.0.md  FAQ.md  FRACTAL_OMNIVERSE.csv  FRACTAL_OMNIVERSE_RECURSIVE.csv  FRACTAL_SEED.json  FUTUROS_PRODUCTOS.md  GRAPHICS_REPORT.md  HOLOGRAPHIC_AI_REPORT.md  HYPER_METROLOGY_REPORT.md  INDICE_MAESTRO_COMPLETO.md  INFODYNAMICS_REPORT.md  INSTALL.bat  KNOWN_LIMITATIONS.md  LICENSE  MANUAL_USUARIO.md  OMNI_DREAM_REPORT.md  PRODUCTION_CONFIG.py  PRODUCTOS_TERMINADOS.md  PROJECTS.md  README.md  (+117 more)
.github/: PAGES_CONFIG.md
architect/: universe_designer.py
benchmarks/: benchmark_native.py  benchmark_simulation.py  benchmark_superposition.py
cmfo/: __init__.py  bridge.py  cli.py  compression.py  server.py  vis.py
computation/: cmfo_computability.md
core/: CMakeLists.txt  SCOPE.md
core/include/cmfo/: cmfo.h
core/language/: README.md  matrix_engine.cpp  matrix_engine.hpp  test_matrix.cpp
core/native/cuda/: cmfo_gamma_core.cu  cmfo_gamma_symbols.h  test_cmfo_gamma.cu
core/native/src/: cmfo_core.h
core/python/: fractal_algebra.py
core/src/: cmfo_core.c  cmfo_language.c
core/tests/: test_basic.c
cortex/: compressor.py  corpus_data.py  decompressor.py  deep_dreamer.py  dreamer.py  encoder.py  memory.py  omni_dreamer.py
css/: style.css
cuda/: theta_cmfo_kernel.cu
d20-cross-domain/: cross_domain_arbiter.py  d20_types.py  domain_metrics.py  test_suite.py
d21-publication/: CMFO_FOUNDATIONAL_PAPER.md  publish.py
d22-explicit-domain/: d22_cmfo_domain.py
d23-exigences/: d23_exigences.py
d24-human-integration/: interface_layer.py  source_registry.py
d25-compliance/: AIA_CMFO_v1.0.md  CMFO_AXIOMS_v1.0.md  CMFO_EPISTEMIC_POLICY.md  CMFO_RESTRICTED_DOMAINS.md  HOW_TO_USE_CMFO.md
d26_edu_pilot/: curricular_profile.py  curriculum_compiler.py  governance.py  syllabus_math_10.json  syllabus_math_10.yaml  test_d26.py  test_pilot_full.py  tutor.py  validator.py
d27_edu_core/: __init__.py  secure_tutor.py  test_core.py
d27_enterprise_pilot/: enterprise_kernel.py  test_enterprise.py
d28_edu_eval/: __init__.py  evaluator.py  rubrics_math_10.json  test_evaluation.py
d29_edu_ui/: __init__.py  index.html  server.py  style.css
d30_desktop_ui/: cmfo_desktop.py
data/: block_headers_200_cache.json  block_headers_cache.json  golden_tensor7.json
discovery/: hyper_probe.py  miner.py
docs/: AUTONOMOUS_MINING_SYSTEM.md  BINARY_HASH_DB_REPORT.md  CMFO_FRACTAL_ALGEBRA_1.1_SPEC.md  CMFO_Whitepaper.tex  COMPLETE_SYSTEM_SPECIFICATION.md  FRACTAL_TORUS_REPORT.md  GEOMETRIC_MINING_SCHEDULER.md  GPU_MINING_ARCHITECTURE.md  MASSIVE_FRACTAL_REPORT.md  SHA256D_FRACTAL_SPEC.md  THEORY_COMPARISON.md  THEORY_CUDA.md  THEORY_PHYSICS.md  adoption.md  citation.html  contributing.html  faq.html  index.html  vis_proof.html
examples/: 01_installation.md  02_tensor7_basic.py  03_determinism_test.py  04_anti_use.md  05_visualization.py  06_compression_test.py  build_binary_db.py  build_golden_database.py  compare_scaling.py  debug_step.py  demo_fractal_compression.py  demo_fractal_memory.py  demo_fractal_memory_1_1.py  demo_hash_lookup.py  demo_procedural_512.py  demo_v1.py  fractal_torus_512.npy  (+13 more)
python/: analyze_real_nonces.py  benchmark_100_cuda.py  benchmark_100_native.py  benchmark_bitcoin_cpu.py  benchmark_bitcoin_cuda.py  benchmark_demo_agresivo.py  benchmark_native.py  benchmark_octonion_gpu.py  check_cpu.py  check_cuda.py  check_cuda_kernel.py  check_cuda_simple.py  cmfo_wrapper.py  debug_alt.py  debug_cuda_simple.py  debug_mining.py  demo_bitcoin_reduction.py  demo_final.txt  demo_final_v2.txt  demo_knowledge.py  demo_ultra7d_complete.py  demo_universal_resolution.py  diagnose_cuda.py  load_blocks.py  mine_final.py  mine_hybrid.py  mine_real_bitcoin.py  mine_sat_optimized.py  octonion_bench.txt  output.txt  output_max.txt  pyproject.toml  setup.py  solve_hybrid_math.py  solve_pure_math.py  stress_test_benchmark.py  test_max_simple.py  test_memory.py  test_result2.txt  validate_real_coverage.py  (+4 more)
python/cmfo/: __init__.py  soliton_visualize.py  stress.py
python/cmfo/bitcoin/: __init__.py  byte_constraint_graph.py  cuda_kernels.py  nonce_restrictor.py  sha256_inverse.py  sha256_sat_complete.py  sha256_structural.py
python/cmfo/universal/: __init__.py  constants.py  figures.py  fractal_memory.py  impossible.py  knowledge_table.py  octonion_algebra.py  operations.py  solver.py  teleportation.py  teleportation_real.py  ultra_math.py
python/tests/: test_bitcoin_constraint_max_rigor.py  test_universal_7d.py
tests/: CMakeLists.txt  METRICS.md  demo_cpp.cpp  stress_test_fractal.py  test_action_governance.py  test_algebra.py  test_api.py  test_audit_lock.py  test_basic.py  test_boolean_proof.py  test_constants.py  test_fractal_algebra_1_1.py  test_fractal_cipher.py  test_geometric_foundation.py  test_grammar_laws.py  test_graphics.py  test_invariants.py  test_linguistic_certification.py  test_logic.py  test_mat7_stability.c  test_memory_fractal.py  test_native_correctness.py  test_physics.py  test_physics_engine.py  test_science_extractor.py  test_semantic_algebra.py  test_soliton_collision.c  verify_integration.py  verify_physics.py  verify_semantic_algebra.py
tests/cross/: generate_golden.py  test_c_equivalence.c  test_tensor7_equivalence.py
tests/performance/: benchmark_serialization.py  debug_memory.py  debug_memory_explosion.py  verify_gpu_optimized.py  verify_gpu_stress.py  verify_structural.py
(+411 files in other folders)
