[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmfo"
version = "1.1.0"
description = "Fractal Universal Computation Engine"
authors = [
    { name = "Jonathan Montero Viques", email = "jesuslocopor@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.20"
]

[project.classifiers]
"Development Status :: 5 - Production/Stable",
"Intended Audience :: Science/Research",
"Intended Audience :: Developers",
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3",
"Topic :: Scientific/Engineering :: Artificial Intelligence",
"Topic :: Scientific/Engineering :: Mathematics"

[project.keywords]
"fractal", "compute", "deterministic", "tensor7", "ai", "optimization", "aerospace", "science", "formal-methods", "geometry", "cmfo"

[project.scripts]
cmfo = "cmfo.cli:main"


[project.urls]
Homepage = "https://1jonmonterv.github.io/CMFO-COMPUTACION-FRACTAL-/"
Repository = "https://github.com/1JONMONTERV/CMFO-COMPUTACION-FRACTAL-"

[tool.setuptools.packages.find]
include = ["cmfo*"]
