[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cmfo-fractal"
version = "1.3.0"
description = "Computational Manifold Fractal Operators (CMFO) - Scientific Core"
readme = "README.md"
authors = [{ name = "Investigación CMFO" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest", "hypothesis", "black"]
audit = ["cryptography"]

[tool.setuptools]
packages = ["cmfo"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --import-mode=importlib"
testpaths = ["tests"]
pythonpath = ["."]
