[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmfo-universe"
version = "1.0.0"
description = "Deterministic Fractal Computing Engine"
authors = [
    {name = "Jonnathan Montero Víquez", email = "jmvlavacar@hotmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
]
